share/revng/test/tests/invalidation/three-jump-targets.S.mark-non-jump-target.filecheck
#
# This file is distributed under the MIT License. See LICENSE.md for details.
#

# Add 0x500003, which is not a jump target and, therefore, it should lead to invalidation.
---
Changes:
  - Path:            '/Functions'
    Add:
      Entry:           "0x500003:Code_x86_64"
...
# CHECK: lift:
# CHECK:   module.bc.zstd:
# CHECK:     - ":root"
